fix crop function

--- a/index.html
+++ b/index.html
@@ -274,7 +274,11 @@
                 <!-- Crop Info -->
                 <div class="control-group" id="cropControls" style="display: none;">
                     <h3 data-i18n="crop">裁切</h3>
-                    <p class="info-text" data-i18n="cropInstruction">在畫布上拖曳選擇裁切區域，然後按Enter確認或Escape取消</p>
+                    <p class="info-text" data-i18n="cropInstruction">在畫布上拖曳選擇裁切區域</p>
+                    <div class="preset-buttons">
+                        <button class="btn btn-preset" id="cropConfirmBtn" data-i18n="confirm">確認</button>
+                        <button class="btn btn-preset" id="cropCancelBtn" data-i18n="cancel">取消</button>
+                    </div>
                 </div>
             </div>
         </main>
