canvas styling adjustments

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="lang-text" id="langText">EN</span>
                 </button>
             </div>
-            <p class="subtitle" data-i18n="subtitle">專業的線上圖片編輯工具</p>
+            <!-- <p class="subtitle" data-i18n="subtitle">專業的線上圖片編輯工具</p> -->
         </header>
 
         <main class="main-content">
