feat: Add and dynamically display image resolution on the canvas.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <main class="main-content">
             <!-- Canvas Area -->
             <div class="canvas-container" id="canvasContainer">
+                <div class="resolution-display" id="resolutionDisplay"></div>
                 <canvas id="canvas"></canvas>
                 <div class="drag-overlay" id="dragOverlay">
                     <div class="drag-content">
